--- a/Template/pages/index.html
+++ b/Template/pages/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://www.gstatic.com; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https:;">
+    <meta name="google" content="notranslate">
     <title>LEGAL AIR - Servicios Legales Aeronáuticos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../../css/styles.css">
